--- a/.github/workflows/release-and-deploy.yml
+++ b/.github/workflows/release-and-deploy.yml
@@ -29,11 +29,21 @@ jobs:
         run: |
           echo "LATEST_RELEASE_TAG=$(git tag | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -1)" >> $GITHUB_ENV
       -
+        name: Fix Latest Release Tag
+        run: |
+          if [[ -z "${env.LATEST_RELEASE_TAG// }" ]]; then
+            echo "LATEST_RELEASE_TAG=0.0.0" >> $GITHUB_ENV
+          fi
+      -
         name: Create Next Release Details
         run: |
-          NEW_RELEASE_TYPE=$(git log ${{ env.LATEST_RELEASE_TAG }}..HEAD --pretty=format:'%s' | grep -E '#(release|feat|feature|fix|patch|chore)' | head -1 | cut -d '#' -f 2)
+          NEW_RELEASE_TYPE="${{ inputs.release-type }}"
           echo "NEW_RELEASE_NOTES<<EOF_RELEASE_NOTES" >> $GITHUB_ENV
-          echo "$(git log ${{ env.LATEST_RELEASE_TAG }}..HEAD --pretty=format:'%s')" >> $GITHUB_ENV
+          if [[ ${{ env.LATEST_RELEASE_TAG }} == "0.0.0" ]]; then
+            echo "$(git log --pretty=format:'%s')" >> $GITHUB_ENV
+          else
+            echo "$(git log ${{ env.LATEST_RELEASE_TAG }}..HEAD --pretty=format:'%s')" >> $GITHUB_ENV
+          fi
           echo "EOF_RELEASE_NOTES" >> $GITHUB_ENV
           if [[ $NEW_RELEASE_TYPE == "fix" || $NEW_RELEASE_TYPE == "patch" ]]; then
             echo "NEW_RELEASE_VERSION_NUMBER=$(echo ${{ env.LATEST_RELEASE_TAG }} | awk -F. -v OFS=. '{$NF++; print}')" >> $GITHUB_ENV
