--- a/.github/workflows/create-manual-release.yml
+++ b/.github/workflows/create-manual-release.yml
@@ -42,7 +42,8 @@ jobs:
       -
         name: Fix Latest Release Tag
         run: |
-          if [[ -z "${env.LATEST_RELEASE_TAG// }" ]]; then
+          LATEST_RELEASE_TAG="${{ env.LATEST_RELEASE_TAG }}"
+          if [[ -z "${LATEST_RELEASE_TAG// }" ]]; then
             echo "LATEST_RELEASE_TAG=0.0.0" >> $GITHUB_ENV
           fi
       -
