--- a/.github/workflows/release-and-deploy.yml
+++ b/.github/workflows/release-and-deploy.yml
@@ -31,6 +31,7 @@ jobs:
       -
         name: Fix Latest Release Tag
         run: |
+          LATEST_RELEASE_TAG="${{ env.LATEST_RELEASE_TAG }}"
           if [[ -z "${env.LATEST_RELEASE_TAG// }" ]]; then
             echo "LATEST_RELEASE_TAG=0.0.0" >> $GITHUB_ENV
           fi
