Manter a branch "latest" sempre atualizada

--- a/.github/workflows/release-and-deploy.yml
+++ b/.github/workflows/release-and-deploy.yml
@@ -79,4 +79,11 @@ jobs:
           git_remote_url: ${{ secrets.DOKKU_SSH_URL }}
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
           git_push_flags: --force
-
+      -
+        name: Update Latest Branch
+        if: ${{ env.NEW_RELEASE_VERSION_NUMBER != '0.0.0' }}
+        run: |
+          git checkout latest
+          git reset --hard "${{ env.NEW_RELEASE_VERSION_NUMBER }}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
