--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,3 +71,11 @@ jobs:
           body: ${{ env.NEW_RELEASE_NOTES }}
           draft: false
           prerelease: false
+      -
+        name: Update Latest Branch
+        if: ${{ env.NEW_RELEASE_VERSION_NUMBER != '0.0.0' }}
+        run: |
+          git checkout latest
+          git reset --hard "${{ env.NEW_RELEASE_VERSION_NUMBER }}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
