--- a/.github/workflows/release-and-deploy.yml
+++ b/.github/workflows/release-and-deploy.yml
@@ -81,6 +81,7 @@ jobs:
           git_push_flags: --force
       -
         name: Create Latest Branch
+        if: ${{ env.NEW_RELEASE_VERSION_NUMBER != '0.0.0' }}
         run: |
           git fetch
           if git show-ref --quiet refs/heads/latest; then
