--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,7 @@ jobs:
           prerelease: false
       -
         name: Create Latest Branch
+        if: ${{ env.NEW_RELEASE_VERSION_NUMBER != '0.0.0' }}
         run: |
           git fetch
           if git show-ref --quiet refs/heads/latest; then
